@@ -1,6 +1,7 @@
-Revision history for Catmandu-Store-CouchDB
+Revision history for WWW-ORCID
 
 {{$NEXT}}
+  - Adding documentation
 
 0.0102  2015-04-22 14:00:20 CEST
   - switch to Dist::Milla
